Bumping up max heap for gradle and getting basic immutable spaceclass compilation going.