@@ -39,6 +39,13 @@ dependencies {
 
 }
 
+tasks.withType(ScalaCompile) {
+    configure(scalaCompileOptions.forkOptions) {
+        memoryMaximumSize = '4g'
+        jvmArgs = ['-XX:MaxPermSize=512m']
+    }
+}
+
 task test(overwrite: true, dependsOn: testClasses) << {
     ant.taskdef(name: 'scalatest', classname: 'org.scalatest.tools.ScalaTestAntTask'
             , classpath: sourceSets.test.runtimeClasspath.asPath)
